fix: fix issues with jjwt